fix: img height on mobile

--- a/src/app/components/Hero/hero.module.scss
+++ b/src/app/components/Hero/hero.module.scss
@@ -203,7 +203,7 @@
     top: 0;
     right: 0;
     left: 0;
-    height: 80%;
+    height: 100%;
     border: none;
 
     mask-image:
